[package]
name = "local_jira"
version = "0.1.0"
edition = "2021"
authors = [ "Samuel Da Mota <da.mota.sam@gmail.com>" ]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }


[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold"]

[profile.release]
strip = "symbols"