[package]
name = "local_jira"
version = "0.1.0"
edition = "2021"
authors = [ "Samuel Da Mota <da.mota.sam@gmail.com>" ]

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.4"
base64 = "0.22.0"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
log = "0.4.21"
html2text = "0.12.5"
tempfile = "3.10.1"
dirs = "5.0.1"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=mold"]

[profile.release]
strip = "symbols"